--- a/compiler/package.yaml
+++ b/compiler/package.yaml
@@ -20,6 +20,7 @@ library:
     - ghc-boot
     - bytestring >= 0.10 && < 0.11
     - megaparsec >= 6.4 && < 6.5
+    - scientific >= 0.3 && < 0.4
 
 # executables:
 #   multihash-exe:
