--- a/compiler/architect-compiler.cabal
+++ b/compiler/architect-compiler.cabal
@@ -2,7 +2,7 @@
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: d5fd646745ccaf4c07bdf3b2432684382a22ae54cc6c8c76e8115fe7d8eb3b18
+-- hash: f0a2e5696ff4c2ed2f194862bace31fb75f5001cd08bfa4a6f8ebce6cf86f1d1
 
 name:           architect-compiler
 version:        0.0.1
@@ -29,5 +29,7 @@ library
     , ghc-paths
     , hint >=0.7 && <0.8
     , megaparsec >=6.4 && <6.5
+    , neat-interpolation >=0.3 && <0.4
     , scientific >=0.3 && <0.4
+    , text >=1.2 && <1.3
   default-language: Haskell2010
