--- a/compiler/package.yaml
+++ b/compiler/package.yaml
@@ -21,6 +21,8 @@ library:
     - bytestring >= 0.10 && < 0.11
     - megaparsec >= 6.4 && < 6.5
     - scientific >= 0.3 && < 0.4
+    - neat-interpolation >= 0.3 && < 0.4
+    - text >= 1.2 && < 1.3
 
 # executables:
 #   multihash-exe:
