--- a/compiler/architect-compiler.cabal
+++ b/compiler/architect-compiler.cabal
@@ -2,7 +2,7 @@
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: f0a2e5696ff4c2ed2f194862bace31fb75f5001cd08bfa4a6f8ebce6cf86f1d1
+-- hash: b79230b71f5da57be513ebf63f9c9e4d268c9b90b26507c726af19150181c6fa
 
 name:           architect-compiler
 version:        0.0.1
@@ -18,15 +18,18 @@ library
   exposed-modules:
       Architect.Compiler
   other-modules:
+      Architect.Parser
       Paths_architect_compiler
   hs-source-dirs:
       src
   build-depends:
       base >=4.7 && <5
     , bytestring >=0.10 && <0.11
+    , data-fix >=0.2 && <0.3
     , ghc >=7.8 && <8.4
     , ghc-boot
     , ghc-paths
+    , hashmap >=1.3 && <1.4
     , hint >=0.7 && <0.8
     , megaparsec >=6.4 && <6.5
     , neat-interpolation >=0.3 && <0.4
