--- a/compiler/package.yaml
+++ b/compiler/package.yaml
@@ -23,6 +23,8 @@ library:
     - scientific >= 0.3 && < 0.4
     - neat-interpolation >= 0.3 && < 0.4
     - text >= 1.2 && < 1.3
+    - data-fix >= 0.2 && < 0.3
+    - hashmap >= 1.3 && < 1.4
 
 # executables:
 #   multihash-exe:
