--- a/compiler/architect-compiler.cabal
+++ b/compiler/architect-compiler.cabal
@@ -2,7 +2,7 @@
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: b79230b71f5da57be513ebf63f9c9e4d268c9b90b26507c726af19150181c6fa
+-- hash: 4b9548dcd3c6f435f27176732b09b167af9649aa2f3c50e0a3651cf6804b4e69
 
 name:           architect-compiler
 version:        0.0.1
@@ -26,13 +26,16 @@ library
       base >=4.7 && <5
     , bytestring >=0.10 && <0.11
     , data-fix >=0.2 && <0.3
+    , deepseq >=1.4 && <1.5
     , ghc >=7.8 && <8.4
     , ghc-boot
     , ghc-paths
+    , hashable >=1.2 && <1.3
     , hashmap >=1.3 && <1.4
     , hint >=0.7 && <0.8
     , megaparsec >=6.4 && <6.5
     , neat-interpolation >=0.3 && <0.4
     , scientific >=0.3 && <0.4
     , text >=1.2 && <1.3
+    , transformers >=0.5 && <0.6
   default-language: Haskell2010
