--- a/compiler/package.yaml
+++ b/compiler/package.yaml
@@ -24,7 +24,10 @@ library:
     - neat-interpolation >= 0.3 && < 0.4
     - text >= 1.2 && < 1.3
     - data-fix >= 0.2 && < 0.3
+    - hashable >= 1.2 && < 1.3
     - hashmap >= 1.3 && < 1.4
+    - deepseq >= 1.4 && < 1.5
+    - transformers >= 0.5 && < 0.6
 
 # executables:
 #   multihash-exe:
