--- a/compiler/architect-compiler.cabal
+++ b/compiler/architect-compiler.cabal
@@ -2,7 +2,7 @@
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 4b9548dcd3c6f435f27176732b09b167af9649aa2f3c50e0a3651cf6804b4e69
+-- hash: ae76e5851895ccfdffba286465322c9b054ddd0f23af024609466fb1193df2bb
 
 name:           architect-compiler
 version:        0.0.1
@@ -18,6 +18,7 @@ library
   exposed-modules:
       Architect.Compiler
   other-modules:
+      Architect.Expr.Types
       Architect.Parser
       Paths_architect_compiler
   hs-source-dirs:
