--- a/compiler/architect-compiler.cabal
+++ b/compiler/architect-compiler.cabal
@@ -2,7 +2,7 @@
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: ae76e5851895ccfdffba286465322c9b054ddd0f23af024609466fb1193df2bb
+-- hash: 20d02ab366c80f2b0c1b10bb00b4971188df081b92b47f43b0338ebe2fbf3849
 
 name:           architect-compiler
 version:        0.0.1
@@ -18,6 +18,7 @@ library
   exposed-modules:
       Architect.Compiler
   other-modules:
+      Architect.Annotations
       Architect.Expr.Types
       Architect.Parser
       Paths_architect_compiler
