--- a/compiler/package.yaml
+++ b/compiler/package.yaml
@@ -28,6 +28,7 @@ library:
     - hashmap >= 1.3 && < 1.4
     - deepseq >= 1.4 && < 1.5
     - transformers >= 0.5 && < 0.6
+    - deriving-compat >= 0.4 && < 0.5
 
 # executables:
 #   multihash-exe:
