--- a/ProtocolResearch/SessionTypesDemo/session-types.cabal
+++ b/ProtocolResearch/SessionTypesDemo/session-types.cabal
@@ -2,7 +2,7 @@
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 8af67ce7ac11e0880eab5868540bd85cc83e67e6c95f14e313295f54be92bd1b
+-- hash: 4f667d8cb8b912935320a38f769ec6b3f91a6d1d3a1bf7792d8ab7ade3947dce
 
 name:           session-types
 version:        0.1.0.0
@@ -35,6 +35,7 @@ library
   build-depends:
       base >=4.7 && <5
     , containers
+    , data-fix
   default-language: Haskell2010
 
 test-suite SessionTypesDemo-test
@@ -49,6 +50,7 @@ test-suite SessionTypesDemo-test
       QuickCheck
     , base >=4.7 && <5
     , containers
+    , data-fix
     , hspec
     , session-types
   default-language: Haskell2010
