--- a/compiler/package.yaml
+++ b/compiler/package.yaml
@@ -1,10 +1,10 @@
-name: architect-compiler
-version: 0.0.1
-license: Apache-2.0
-author: ['CMCDragonkai']
-maintainer: 'roger.qiu@matrix.ai'
-copyright: ['(c) Matrix AI 2017']
-category: Compiler
+name:                architect-compiler
+version:             0.1.0.0
+github:              "MatrixAI/Haskell-Demo"
+license:             Apache
+author:              "CMCDragonkai"
+maintainer:          "roger.qiu@matrix.ai"
+copyright:           "Copyright: (c) 2017 Matrix AI"
 
 dependencies:
   - base >= 4.7 && < 5
@@ -19,7 +19,7 @@ library:
     - ghc-paths
     - ghc-boot
     - bytestring >= 0.10 && < 0.11
-    - megaparsec >= 6.4 && < 6.5
+    - megaparsec >= 6.3 && < 6.4
     - scientific >= 0.3 && < 0.4
     - neat-interpolation >= 0.3 && < 0.4
     - text >= 1.2 && < 1.3
@@ -28,22 +28,4 @@ library:
     - hashmap >= 1.3 && < 1.4
     - deepseq >= 1.4 && < 1.5
     - transformers >= 0.5 && < 0.6
-    - deriving-compat >= 0.4 && < 0.5
-
-# executables:
-#   multihash-exe:
-#     main: Main.hs
-#     source-dirs: app
-#     dependencies:
-#       - hs-multihash
-#       - bytestring >= 0.10 && < 0.11
-#       - io-streams >= 1.2 && < 1.6
-#       - optparse-applicative >= 0.11 && < 0.15
-#     ghc-options:
-#       - -threaded
-#       - -rtsopts
-#       - -with-rtsopts=-N
-#       - -Wall
-#       - -funbox-strict-fields
-#       - -fdicts-cheap
-#       - -O2
+    - deriving-compat >= 0.3.6 && < 0.4
